# OllamaFileSearch

./: .gitignore  LICENSE  README.md  fileDetector.service  fileDetector.sh  fileWatcher.path  fileWatcher.service  fileWatcherHandler.sh  search.js  sseEndpoint.php
Mumblore/: index.html  script.js  search.js  style.css
OllamaFileSearch/: fileWatcher.service  fileWatcherHandler.sh  sseEndpoint.php
OllamaFileSearch/OllamaFileSearch/py/: BertModelInstaller.py  appendMetadata.py  getFileText.py  searchChroma.py
OllamaFileSearch/py/: BertModelInstaller.py  ModernBertEmbeddings.py  appendMetadata.py  fileRegisterEndpoint.py  promptOllama.py  pyproject.toml  searchEndpoint.py
html/OllamaFileSearch/: index.html  script.js  sseEndpoint.php  style.css
myapp/OllamaFileSearch/: BertModelInstaller.py  DummyEmbeddings.py  Installer.py  MarkItDownLoader.py  ModernBertEmbeddings.py  PageContentRetrieverWrapper.py  appendMetadata.py  constants.py  fctrl_win.py  fileRegisterEndpoint.py  genAnswerEndpoint.py  getDatabase.py  getFileText.py  ofs.duckdb.wal  promptOllama.py  pyproject.toml  searchChroma.py  searchEndpoint.py  vectorize.py
py/: MarkItDownLoader.py  ModernBertEmbeddings.py  appendMetadata.py  databaseFunction.py  fileRegister.py  fileRegisterEndpoint.py  genAnswer.py  genAnswerEndpoint.py  getFileText.py  main.py  promptOllama.py  pyproject.toml  queryAndLlm.py  registerFileInfo2DB.py  searchChroma.py  searchEndpoint.py  vectorize.py
