[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "openpyxl>=3.1.5",
    "protobuf>=6.32.0",
    "pypdfium2>=4.30.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "sentencepiece>=0.2.1",
    "transformers>=4.55.2",
    "flash-attn>=2.8.3",
    "pyinotify>=0.9.6",
]
