[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]>=0.1.2",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.55.2",
    "flash-attn>=2.8.3",
    "extractous>=0.3.0",
]
