[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "lindera-py>=0.41.0",
    "numpy>=2.1.2",
    "chardet>=5.2.0",
    "protobuf>=6.32.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.55.2",
    "extractous>=0.3.0",
    "torch==2.8.0+cu129",
    "torchvision",
    "flash-attn>=2.8.3; sys_platform == 'linux'",
    "pypdfium2>=4.30.0",
    "bs4>=0.0.2",
    "pydantic>=2.11.7",
    "hf-xet>=1.1.7",
    "markitdown[docx,outlook,pdf,pptx,xlsx]>=0.1.2",
    "nvidia-pyindex>=1.0.9",
    "nvidia-cudnn-cu12>=9.10.2.21",
]

[tool.uv.sources]
torch = { index = "torch-cuda" }
torchvision = { index = "torch-cuda" }

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu129"
explicit = true


[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]
nvidia-pyindex = ["pip"]
nvidia-cudnn = ["pip"]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
